# avm-lab

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  justfile
.github/workflows/: avm.yml  specs.yml
avm/: Cargo.toml  justfile
avm-slides/: .gitignore  Makefile  build.sh  main-blx.bib  main.tex
avm/avm-book/: book.toml  mermaid-init.js
avm/avm-book/src/: SUMMARY.md  intro.md
avm/avm-book/src/concepts/: instructions.md  itree.md  transactions.md  val.md
avm/avm-book/src/reference/: architecture.md  dsl.md  errors.md  tracing.md
avm/avm-book/src/tutorials/: battleship.md  distributed.md  ping_pong.md
avm/avm-core/: Cargo.toml
avm/avm-core/src/: dsl.rs  lib.rs  transport.rs
avm/avm-core/src/error/: composed.rs  controller.rs  fd.rs  introspect.rs  machine.rs  mod.rs  obj.rs  pure_fn.rs  reflect.rs  reify.rs  tx.rs
avm/avm-core/src/instruction/: controller.rs  fd.rs  introspect.rs  machine.rs  mod.rs  nondet.rs  obj.rs  pure_fn.rs  reflect.rs  reify.rs  tx.rs
avm/avm-core/src/interpreter/: controller.rs  fd.rs  helpers.rs  introspect.rs  machine.rs  mod.rs  nondet.rs  obj.rs  pure_fn.rs  reflect.rs  reify.rs  tx.rs
avm/avm-core/src/itree/: mod.rs  monad.rs
avm/avm-core/src/store/: meta_store.rs  mod.rs  object_store.rs  state_store.rs
avm/avm-core/src/tape/: cfg.rs  compile.rs  interpret.rs  mod.rs
avm/avm-core/src/trace/: mod.rs
avm/avm-core/src/types/: constraint.rs  ids.rs  meta.rs  mod.rs  val.rs
avm/avm-core/src/vm/: mod.rs  pure_fn.rs  registry.rs  state.rs
avm/avm-examples/: Cargo.toml
avm/avm-examples/src/: battleship.rs  lib.rs  ping_pong.rs  protocol.rs
avm/avm-node/: Cargo.toml
avm/avm-node/src/: directory.rs  main.rs  node.rs  protocol.rs  remote_call.rs  sse.rs  transport.rs
specs/: .envrc  README.md  mkdocs.insiders.yml  mkdocs.yml  pyproject.toml  uv.lock.from-config
specs/.agda/: libraries
specs/assets/stylesheets/: agda.css  extra.css
specs/docs/: About.md  References.md  appendix.md  everything.lagda.md  index.md  specs.agda-lib  tags.md
specs/docs/AVM/: Context.lagda.md  Instruction.lagda.md  Interpreter.lagda.md  Runtime.md  SystemModel.md  index.md
specs/docs/Background/: BasicTypes.lagda.md  InteractionTrees.lagda.md  Objects.lagda.md  StatelessObjects.lagda.md  index.md
specs/docs/assets/: agda-codeblock.css
specs/docs/blog/: state-changes.md
specs/docs/examples/: RunnerUtilities.lagda.md  index.md
specs/docs/examples/Battleship/: Game.lagda.md  PlayerBoard.lagda.md  Runner.lagda.md
specs/docs/examples/Common/: Display.lagda.md  Equality.lagda.md  InterpreterSetup.lagda.md  StateInit.lagda.md
specs/docs/examples/Constraints/: NQueens.lagda.md  TokenSwap.lagda.md
specs/docs/examples/PingPong/: Main.lagda.md  Runner.lagda.md
specs/docs/javascripts/: extra.js  mathjax.js
specs/notes/: plainmarkdown.md
specs/references/: ref.bib
specs/wheels/: mkdocs_agda_plugin-0.4.16-py3-none-any.whl  mkdocs_agda_plugin-0.4.17-py3-none-any.whl
